# atelier

./: .env.example  .gitignore  CLAUDE.md  README.ko.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: atelier-approve.md  atelier-start.md  atelier-status.md
.claude/rules/: 00-llm-providers.md  10-artifacts-must-be-typed.md  20-no-relative-doc-links.md  30-web-stack.md  40-quota-not-usd.md  50-dry-run-default.md
.playwright-mcp/: page-2026-05-30T14-51-00-796Z.yml  page-2026-05-30T14-51-03-811Z.yml
assets/: README.md
assets/modern-interiors/: LICENSE.txt  README.txt
atelier/: __init__.py  budget.py  cli.py  config.py  inbox.py  runner.py
atelier/artifacts/: __init__.py  charter.py  code_review.py  design.py  launch.py  plan.py  prd.py
atelier/durable/: __init__.py  temporal_client.py
atelier/eval/: __init__.py  officer.py
atelier/graph/: __init__.py  build.py  checkpointer.py  state.py
atelier/graph/gates/: __init__.py  _council.py  _llm.py  _specialist.py  g1_charter.py  g2_plan.py  g3_design.py  g4_build.py  g5_launch.py
atelier/graph/nodes/: __init__.py
atelier/llm/: __init__.py  acp_client.py  provider.py  sdk_inprocess.py
atelier/mcp/: __init__.py  registry.py
atelier/memory/: __init__.py  base.py  org.py  project.py  role.py
atelier/observability/: __init__.py  langfuse.py  tracer.py
atelier/plugin/: README.md  __init__.py  plugin.json
atelier/protocols/: __init__.py  bounded_debate.py  council.py  janitor.py  reflexion.py
atelier/roles/: __init__.py  base.py  chief_of_staff.py  leads.py  specialists.py
atelier/roles/foundry/: __init__.py  foundry.py  seed.py  spec.py  spec_judge.py
atelier/sandbox/: __init__.py  e2b_sandbox.py
atelier/verify/: __init__.py  critic.py  guardrails.py  judge.py  run.py  schema.py
docs/: demo.tape
scripts/: build_office_bg.py  extract_office_tiles.py  record_cli.sh  record_office.mjs  record_office_demo.py  seed_demo.py
tests/: test_eval_officer.py  test_foundry.py  test_gate_verify.py  test_inbox.py  test_mcp.py  test_memory.py  test_protocols.py  test_roles.py  test_smoke.py  test_verify.py
web/: README.md  package.json  pnpm-lock.yaml
web/app/: CopyButton.tsx  globals.css  layout.tsx  page.tsx  sitemap.ts
web/app/dashboard/: ActiveRunsPanel.tsx  AutoRefresh.tsx  InboxPanel.tsx  page.tsx
web/app/office/: BUILD_NOTES.md  OfficeView.tsx  page.tsx
web/app/roster/: page.tsx
web/lib/: useEventStream.ts
(+7 files in other folders)
